Fix layout issue of Ring lever

--- a/src/css/ringLever.css
+++ b/src/css/ringLever.css
@@ -1,6 +1,13 @@
 .ring-lever {
   position: absolute;
   width: 7rem;
-  top: -5px;
   cursor: pointer;
+}
+
+.ring-lever-sort {
+  top: -5px;
+}
+
+.ring-lever-unsort {
+  top: -3px;
 }
